--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@radix-ui/react-dialog": "^1.1.3",
     "@radix-ui/react-dropdown-menu": "^2.1.3",
     "@radix-ui/react-slot": "^1.1.1",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "lucide-react": "^0.468.0",
+    "moment": "^2.30.1",
     "next": "15.1.0",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
