--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "embla-carousel-react": "^8.5.1",
     "lucide-react": "^0.468.0",
     "moment": "^2.30.1",
     "next": "15.1.0",
