--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "embla-carousel-react": "^8.5.1",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.468.0",
     "moment": "^2.30.1",
     "next": "15.1.0",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-leaflet": "^5.0.0-rc.2",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
