--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "^1.0.0",
+    "cmdk": "^0.2.1",
     "embla-carousel-react": "^8.5.1",
     "leaflet": "^1.9.4",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.468.0",
     "moment": "^2.30.1",
     "next": "15.1.0",
